--- a/xiexiaoyu/index.html
+++ b/xiexiaoyu/index.html
@@ -265,10 +265,10 @@
                 </div>
             </div>
             <div id="clock-box">
-                <span class="STYLE1"></span>
+                <!-- <span class="STYLE1"></span>
                 <font color="#33CC00">亲爱的，我喜欢你</font>
                 <span class="STYLE1">已经是……</span>
-                <div id="clock"></div>
+                <div id="clock"></div> -->
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
@@ -498,10 +498,10 @@
                 </div>
             </div>
             <div id="clock-box">
-                <span class="STYLE1"></span>
+                <!-- <span class="STYLE1"></span>
                 <font color="#33CC00">亲爱的，我喜欢你</font>
                 <span class="STYLE1">已经是……</span>
-                <div id="clock"></div>
+                <div id="clock"></div> -->
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
@@ -721,10 +721,10 @@
                 </div>
             </div>
             <div id="clock-box">
-                <span class="STYLE1"></span>
+                <!-- <span class="STYLE1"></span>
                 <font color="#33CC00">亲爱的，我喜欢你</font>
                 <span class="STYLE1">已经是……</span>
-                <div id="clock"></div>
+                <div id="clock"></div> -->
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
@@ -943,10 +943,10 @@
                 </div>
             </div>
             <div id="clock-box">
-                <span class="STYLE1"></span>
+                <!-- <span class="STYLE1"></span>
                 <font color="#33CC00">亲爱的，我喜欢你</font>
                 <span class="STYLE1">已经是……</span>
-                <div id="clock"></div>
+                <div id="clock"></div> -->
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
@@ -1161,10 +1161,10 @@
             </div>
         </div>
         <div id="clock-box">
-            <span class="STYLE1"></span>
+            <!-- <span class="STYLE1"></span>
             <font color="#33CC00">亲爱的，我喜欢你</font>
             <span class="STYLE1">已经是……</span>
-            <div id="clock"></div>
+            <div id="clock"></div> -->
         </div>
         <canvas id="canvas" width="1100" height="680"></canvas>
     </div>
@@ -1378,10 +1378,10 @@
         </div>
     </div>
     <div id="clock-box">
-        <span class="STYLE1"></span>
+        <!-- <span class="STYLE1"></span>
         <font color="#33CC00">亲爱的，我喜欢你</font>
         <span class="STYLE1">已经是……</span>
-        <div id="clock"></div>
+        <div id="clock"></div> -->
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
 </div>
@@ -1592,10 +1592,10 @@
         </div>
     </div>
     <div id="clock-box">
-        <span class="STYLE1"></span>
+        <!-- <span class="STYLE1"></span>
         <font color="#33CC00">亲爱的，我喜欢你</font>
         <span class="STYLE1">已经是……</span>
-        <div id="clock"></div>
+        <div id="clock"></div> -->
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
 </div>
