--- a/tzh/index.html
+++ b/tzh/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>好不好看呀</title>
+    <title>美丽小姐姐->琴</title>
     <link type="text/css" rel="stylesheet" href="./file/default.css">
     <script type="text/javascript" src="./file/jquery.min.js"></script>
     <script type="text/javascript" src="./file/jscex.min.js"></script>
@@ -20,13 +20,40 @@
 
 <body>
     <div id="main">
-        <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a
+        <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a
+                href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a
                 href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>
         <audio autoplay="autoplay" height="100" width="100">
             <source src="renxi.mp3" type="audio/mp3" />
             <embed height="100" width="100" src="renxi.mp3" />
         </audio>
         <div id="wrap">
+            <div id="text">
+                <div id="code">
+                    <font color="#FF0000"> <span class="say">谢谢你的蛋糕：</span><br>
+                        <span class="say"> 半熟芝士</span><br>
+                        <span class="say"> 蒲公英</span><br>
+                        <span class="say"> 草莓夹心</span><br>
+                        <span class="say"> 好好吃</span><br>
+                        <span class="say"> 哈哈。。。</span><br>
+                        <span class="say"></span><br>
+                        <span class="say"></span><br>
+                        <span class="say"></span><br>
+                        <span class="say"> </span><br>
+                        <span class="say"> </span><br>
+                        <span class="say"> </span><br>
+                        <span class="say"><span class="space"></span> -- </span> </font>
+                    <br />
+                    <br />
+                    </p>
+                </div>
+            </div>
+            <div id="clock-box">
+                <span class="STYLE1"></span>
+                <font color="#33CC00">期待你早点来长沙，给你个大拥抱，一起去吃烤肉、小龙虾</font>
+                <span class="STYLE1"></span>
+                <!-- <div id="clock"></div> -->
+            </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
 
@@ -124,7 +151,7 @@
                 canvas.toggleClass('hand', seed.hover(x, y));
             });
 
-            
+
             // setTimeout(()=>{
             //     console.log(canvas);
             //     canvas.click();
