--- a/tzh/index.html
+++ b/tzh/index.html
@@ -50,7 +50,7 @@
             </div>
             <div id="clock-box">
                 <span class="STYLE1"></span>
-                <font color="#33CC00">期待你早点来长沙，给你个大拥抱，一起去吃烤肉、小龙虾</font>
+                <font color="#33CC00">期待你早点来长沙，给你个大拥抱，一起去吃烤肉和小龙虾</font>
                 <span class="STYLE1"></span>
                 <!-- <div id="clock"></div> -->
             </div>
